# Galactic-Market

./: .env  .gitignore  Cargo.toml  DESIGN.md  GEMINI.md  README.md  branch_cov.txt  commit.json  coverage.txt  decisions_tail.txt  docker-compose.yml
.agent/learning/: rust.md
.agent/rules/: github-issues.md  rust-env.md  rust-learning.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  github-app.yml  pull_request_template.md  rust.yml
.github/workflows/: ci.yml  codspeed.yml  copilot-setup-steps.yml  coverage.yml  rust.yml
.lore/: config.toml
benches/: sim_bench.rs
data/: events.json  names.json
migrations/: 20260410000000_initial_schema.sql  20260410010000_stage1_economy.sql  20260410020000_copper_tin_facilities.sql  20260412030000_logistics.sql  20260413000000_company_status.sql  20260414000000_company_trade_age.sql  20260414010000_stage3_logistics.sql  20260415000000_stage4_politics.sql  20260417000000_banking_system.sql  20260418000000_resource_is_vital.sql  20260418010000_active_events_target_id_b.sql  20260419000000_add_planet_fertility.sql  20260420000000_closed_loop_economy.sql  20260421000000_political_military_systems.sql  20260625000000_war_cumulative_losses.sql  20260625010000_occupation_invariants.sql  20260704000000_war_participant_side_roles.sql  20260715000000_diplomatic_neutral_since_tick.sql  20260715010000_war_exhaustion_fields.sql
src/: lib.rs  main.rs
src/db/: load.rs  mod.rs  seed.rs  utils.rs
src/sim/: alliances.rs  consumption.rs  decisions.rs  events.rs  finance.rs  logger.rs  logistics.rs  markets.rs  military.rs  mod.rs  namegen.rs  politics.rs  production.rs  resources.rs  state.rs
tests/: banking_events_test.rs  phase2_refactor_integration_test.rs  sim_integration_test.rs  war_economics_test.rs
