[package]
name = "galactic-market"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
rand = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "7.1"
petgraph = "0.8.3"


[dev-dependencies]
divan = { version = "4.4.1", package = "codspeed-divan-compat" }

[[bench]]
name = "sim_bench"
harness = false

